dodaj kuchnie japonska

--- a/index.html
+++ b/index.html
@@ -1,16 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Kuchnie świata</title>
-</head>
-<body>
+  </head>
+  <body>
     <header>
-        <h1>Blog o kuchniach świata</h1>
+      <h1>Blog o kuchniach świata</h1>
     </header>
     <main>
-        <!-- cześć, zapraszam do edycji -->
+      <!-- cześć, zapraszam do edycji -->
+      <section>
+        <h2>Kuchnia japońska</h2>
+        <img
+          src="https://cdn.pixabay.com/photo/2021/01/01/15/31/sushi-balls-5878892_1280.jpg"
+        />
+      </section>
     </main>
-</body>
+  </body>
 </html>
