--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
     </header>
     <main>
         <!-- cześć, zapraszam do edycji -->
+        <section>
+            <h2>Kuchnia francuska</h2>
+            <img src="https://cdn.pixabay.com/photo/2016/03/27/21/59/bread-1284438_1280.jpg" alt="">
+        </section>
     </main>
 </body>
 </html>
