dodaj kuchnie koreanska

--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
     </header>
     <main>
         <!-- cześć, zapraszam do edycji -->
+        <section>
+            <h2>Kuchnia koreańska</h2>
+            <img src="https://cdn.pixabay.com/photo/2021/10/16/12/50/hotpot-6714953_1280.jpg" alt="">
+        </section>
     </main>
 </body>
 </html>
