dodaj kuchnie indyjska

--- a/index.html
+++ b/index.html
@@ -1,16 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Kuchnie świata</title>
-</head>
-<body>
+  </head>
+  <body>
     <header>
-        <h1>Blog o kuchniach świata</h1>
+      <h1>Blog o kuchniach świata</h1>
     </header>
     <main>
-        <!-- cześć, zapraszam do edycji -->
+      <!-- cześć, zapraszam do edycji -->
+      <section>
+        <h2>Kuchnia indyjska</h2>
+        <div>
+          <img
+            src="https://media.istockphoto.com/id/1411646705/pl/zdj%C4%99cie/kurczak-tikka-masala-gotowany-marynowany-kurczak-w-przyprawionym-sosie-curry.jpg?s=2048x2048&w=is&k=20&c=GrGQORNNzixTWegUrbXEzivhIsM0iFKwCbJh9ZH2Rsk="
+            alt=""
+          />
+        </div>
+      </section>
     </main>
-</body>
+  </body>
 </html>
