--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <section>
             <h2>Kuchnia francuska</h2>
             <img src="https://cdn.pixabay.com/photo/2016/03/27/21/59/bread-1284438_1280.jpg" alt="">
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eius deserunt rem dolore modi rerum, sequi similique accusantium commodi mollitia dignissimos ad architecto ullam amet ipsa consectetur laudantium, eum accusamus nemo.</p>
         </section>
     </main>
 </body>
