--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
         <img
           src="https://cdn.pixabay.com/photo/2021/01/01/15/31/sushi-balls-5878892_1280.jpg"
         />
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium
+          porro harum repellat nisi, facere aliquid, laudantium doloribus sit ex
+          eum magnam, odio expedita vel cumque dolore consequatur. Ex, aut sit.
+        </p>
       </section>
     </main>
   </body>
