--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <section>
             <h2>Kuchnia koreańska</h2>
             <img src="https://cdn.pixabay.com/photo/2021/10/16/12/50/hotpot-6714953_1280.jpg" alt="">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In nihil est rerum consequuntur eveniet itaque, reprehenderit, soluta eum obcaecati sequi ipsum numquam distinctio accusamus debitis unde similique autem iste veniam?</p>
         </section>
     </main>
 </body>
