--- a/index.html
+++ b/index.html
@@ -19,6 +19,12 @@
             alt=""
           />
         </div>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod
+          obcaecati error, optio tenetur doloribus soluta fuga fugiat unde
+          temporibus dolorum culpa autem rem quo minima quidem expedita
+          laboriosam numquam omnis?
+        </p>
       </section>
     </main>
   </body>
