--- a/index.html
+++ b/index.html
@@ -12,5 +12,14 @@
     <main>
         <!-- cześć, zapraszam do edycji -->
     </main>
+    <section class="walaszek">
+        <h2>Woda z solą</h2>
+        <img src="https://wykop.pl/cdn/c3201142/comment_sQhHB4HX7vTbkqL2uldMGB2NN6hVv63i,w400.jpg" alt="">
+        <p>– Ale pięknie pachnie! Maciek, co gotujesz?</p>
+        <p>– Wodę.</p>      
+        <p>– Ale się zrobiła świąteczna atmosfera. U nas na Wigilię zawsze była woda. Ojciec już 2 dni wcześniej zbierał śnieg do miednicy. Ale aromat, czego dodałeś?</p> 
+        <p>– Soli.</p>    
+        <p>– Mmm, klasyka!</p>
+    </section>
 </body>
 </html>
